2004-04-11 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (geniCodeLogic): made it static,
	(geniCodeLogicAndOr): added in order to fix bug #905492,
	(ast2iCode): fixed bug #905492
	* support/regression/tests/bug-905492.c: added
        
2004-03-29 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (addCast): don't cast float to char
	* device/lib/libsdcc.lib: added _memmove

2004-03-28 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/large/Makefile: fixed parallel execution by
	replacing `make` by `$(MAKE)`

2004-03-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPointerGetSetOfs): correctly handle 1 byte array
	offsets (fixes bug #923936)

2004-03-26 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/small/Makefile: fixed parallel execution by
	replacing `make` by `$(MAKE)`

2004-03-23 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/vprintf.c (vsprintf): minor optimization, see bug #801101

2004-03-23  Scott Dattalo  <scott AT dattalo.com>

	* src/pic/gen.c (genCpl): multi-byte complements were not working.
	* src/regression/Makefile: Regression test was not running.

2004-03-23 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (resultTypePropagate, decorateType): avoid promotion to int for
	complement if possible
	* src/SDCCval.c (valComplement),
	* src/SDCCicode.c (operandOperation): fixed complement of literal
	* support/regression/tests/onebyte.c (testComplement): added

2004-03-22 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (processParms): fixed bug #920866; decorateType() can
	return an optimized tree; actually replace actParm with the new tree
	* src/SDCCast.h: added some parantheses to remove side effects
	* support/regression/tests/bug-920866.c

2004-03-21  Scott Dattalo  <scott AT dattalo.com>
	* src/pic/gen.c, src/pic/gen.h, src/pic/genarith.c, src/pic/pcode.c:
	Bit operands were not being handled properly in the pic14 port.